--- a/contacto.html
+++ b/contacto.html
@@ -580,7 +580,7 @@ select.form-control {
     </div>
 
     <div class="back-btn-container">
-      <a href="index5.html" class="back-btn">
+      <a href="index.html" class="back-btn">
         <i class="fas fa-arrow-left"></i> Volver al Portafolio
       </a>
     </div>
@@ -670,7 +670,7 @@ select.form-control {
   <div class="footer-content">
     <p>© 2026 <strong>Laura Ivón</strong> · Portafolio</p>
     <p>
-      <a href="index5.html">Inicio</a> ·
+      <a href="index.html">Inicio</a> ·
       <a href="mailto:177291@upslp.edu.mx">177291@upslp.edu.mx</a> ·
       <a href="https://github.com/livtech" target="_blank" rel="noopener">GitHub</a>
     </p>
@@ -679,3 +679,4 @@ select.form-control {
 
 </body>
 </html>
+
